be/feat: update swagger to use openapi3.0
