# backend/src/controllers/loginUser.js
@@ -7,16 +7,18 @@ const bcrypt = require("bcrypt");
 const jwt = require("jsonwebtoken");
 
 async function loginUser(req, res, next) {
-  /*
-//  #swagger.tags = ['Users']
-//  #swagger.description = 'Login for registered users.'
-/*  #swagger.requestBody = {
-      required: true,
-      content: {
-        "application/json": {
-          schema: { $ref: "#/definitions/userCredentialsSchema" }
-        }   
-    } 
+/**
+  #swagger.auto = false
+  #swagger.tags = ['Users']
+  #swagger.description = 'Login for registered users.'
+  #swagger.requestBody = {
+    description: 'Request body containing users email and password (encrypted).',
+    schema: { $ref: "#/definitions/userCredentialsSchema" }  
+  }
+  #swagger.responses[200] = {
+    description: 'User logged in succesfully; sent JWT token to client.',
+    schema: { $ref: "#/definitions/loginUser200ResponseSchema" }
+  } 
 */
   try {
     // validar peticion
